# GAMES101

./: .gitignore
Homework1/Assignment1/: CMakeLists.txt  main.cpp
Homework2/Skeleton/: main.cpp  rasterizer.cpp
